:lipstick: Fixed alignment

--- a/src/kirby/components/list/list.component.tns.global.scss
+++ b/src/kirby/components/list/list.component.tns.global.scss
@@ -10,46 +10,46 @@ $row-padding-top: size('s');
   RadListView {
     background-color:  get-color('background-color');
   }
-  
+
   .row, .section-header {
     padding: $row-padding-top size('xxs') size('s') size('xxs');
   }
-  
-  
+
+
   .no-more-items {
     text-align: center;
     padding-bottom: size('m');
     padding-top: size('m');
   }
-  
+
   .row {
     background-color: get-color('white');
     margin: 0 $shadow-size;
     margin-top: -$shadow-size;
     padding-top: $row-padding-top + $shadow-size;
-  
+
     &.divider {
       border-color: get-color('background-color');
       border-bottom-width: 1;
     }
-  
+
     &.selected Label {
       font-weight: font-weight('bold');
     }
-  
+
     &.first {
       margin-top: $shadow-size;
       padding-top: $row-padding-top;
-  
+
       &.rounded {
         border-top-left-radius: $border-radius;
         border-top-right-radius: $border-radius;
       }
     }
-  
+
     &.last {
       margin-bottom: $shadow-size-bottom;
-  
+
       &.rounded {
         border-bottom-left-radius: $border-radius;
         border-bottom-right-radius: $border-radius;
@@ -60,7 +60,9 @@ $row-padding-top: size('s');
   .swipe-action {
     background-color: #{get-color('primary')};
     color: #{get-color('primary-contrast')};
-  
+    text-align: center;
+    padding: 0 size('s');
+
     @each $color-name, $color-value in $main-colors {
         &.#{$color-name} {
             background-color: #{get-color($color-name)};
